--- a/index.html
+++ b/index.html
@@ -6,41 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>STM's Nobita</title>
 
-    <!-- Favicon Link (Profile Picture for Tab) -->
-    <link rel="icon" href="https://static.vecteezy.com/system/resources/thumbnails/023/457/970/small_2x/purple-love-story-silhouette-couple-generative-ai-photo.jpg" type="image/jpeg">  <!-- Favicon Image -->
+    <!-- Favicon Link -->
+    <link rel="icon" href="https://static.vecteezy.com/system/resources/thumbnails/023/457/970/small_2x/purple-love-story-silhouette-couple-generative-ai-photo.jpg" type="image/jpeg">  
 
+    <!-- Google Site Verification Meta Tag -->
+    <meta name="google-site-verification" content="SsujjpSdbP_qwuxC3VCx2IRELoMniOfKAne25y6ufNc" />
+
+    <!-- External CSS -->
+    <link rel="stylesheet" href="styles.css"> 
     <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-
-        h1, h2, h3 {
-            font-family: 'Quicksand', sans-serif;
-            color: #4A4A4A;
-        }
-
-        p, a {
-            font-family: 'Roboto', sans-serif;
-            color: #555;
-            font-size: 18px;
-            line-height: 1.6;
-        }
-
-        a {
-            text-decoration: none;
-            color: #3498db;
-        }
-
-        a:hover {
-            color: #2980b9;
-        }
-
         .moving-line {
             position: absolute;
+            top: 60px;
             width: 100%;
             overflow: hidden;
             white-space: nowrap;
@@ -61,147 +38,6 @@
         #home {
             margin-top: 150px;
         }
-
-        /* First Moving Line - Purple */
-        .moving-line.first {
-            top: 75px; /* Adjusted upward by 0.5 inches */
-            z-index: 1;
-        }
-
-        .moving-line.first span {
-            color: purple;
-            font-size: 28px;
-            font-weight: 600;
-        }
-
-        /* Second Moving Line - Black */
-        .moving-line.second {
-            top: 135px; /* Adjusted upward by 0.5 inches */
-            z-index: 0;
-        }
-
-        .moving-line.second span {
-            color: black;
-            font-size: 36px;
-            font-weight: bold;
-        }
-
-        header {
-            background-color: #3498db;
-            padding: 20px 0;
-            text-align: center;
-            color: white;
-        }
-
-        header h1 {
-            font-size: 36px;
-            font-weight: 700;
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-
-        nav ul li a {
-            font-size: 20px;
-            color: white;
-            font-weight: 500;
-        }
-
-        nav ul li a:hover {
-            color: #ecf0f1;
-        }
-
-        section {
-            padding: 50px 0;
-            text-align: center;
-            max-width: 900px;
-            margin: 0 auto;
-        }
-
-        section h2 {
-            font-size: 30px;
-            font-weight: 600;
-            color: #2c3e50;
-            margin-bottom: 20px;
-        }
-
-        section p {
-            font-size: 20px;
-            color: #7f8c8d;
-            margin-bottom: 30px;
-        }
-
-        footer {
-            background-color: #2c3e50;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-        }
-
-        footer p {
-            font-size: 14px;
-            margin: 0;
-        }
-
-        footer .last-line {
-            color: white !important;
-        }
-
-        .container {
-            width: 90%;
-            margin: 0 auto;
-        }
-
-        .home-image {
-            width: 100%;
-            max-width: 600px;
-            margin: 20px 0;
-            border-radius: 10px;
-        }
-
-        form {
-            max-width: 500px;
-            margin: 0 auto;
-            background-color: #ecf0f1;
-            padding: 20px;
-            border-radius: 10px;
-        }
-
-        form label {
-            display: block;
-            font-size: 18px;
-            margin-bottom: 8px;
-        }
-
-        form input {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border-radius: 5px;
-            border: 1px solid #bdc3c7;
-            font-size: 16px;
-        }
-
-        form button {
-            padding: 10px 20px;
-            font-size: 18px;
-            background-color: #3498db;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        form button:hover {
-            background-color: #2980b9;
-        }
     </style>
 </head>
 <body>
@@ -219,24 +55,23 @@
         </div>
     </header>
 
-    <!-- Moving Lines -->
-    <div class="moving-line first">
+    <div class="moving-line">
         <span>Welcome to STM's Nobita - Explore our amazing projects and get in touch!</span>
     </div>
-    <div class="moving-line second">
-        <span>THE SPECIAL DAY OF MY LIFE IS 24TH AUGUST.</span>
+    <div class="moving-line" style="top: 100px;">
+        <span>The special day is 24th August.</span>
     </div>
 
-    <!-- Home Section -->
     <section id="home">
         <div class="container">
             <h2>Home Section</h2>
             <p>Welcome to STM's Nobita! Here we work on cool projects related to STM32 microcontrollers and robotics.</p>
+            
+            <!-- Image from the URL you provided -->
             <img src="https://media.istockphoto.com/id/817147678/photo/heart-shape-paper-book-on-the-beach.jpg?s=612x612&w=0&k=20&c=CN_FxOrS7-ix-QgwHoAHqDrHHqrsZExKpEqy0flwIXE=" alt="Heart Shape Paper Book on the Beach" class="home-image">
         </div>
     </section>
 
-    <!-- About Section -->
     <section id="about">
         <div class="container">
             <h2>About Us</h2>
@@ -244,7 +79,6 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
     <section id="projects">
         <div class="container">
             <h2>Our Projects</h2>
@@ -256,27 +90,29 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
     <section id="contact">
         <div class="container">
             <h2>Contact Us</h2>
             <form id="contactForm">
                 <label for="name">Your Name:</label>
                 <input type="text" id="name" name="name" required>
+                
                 <label for="email">Your Email:</label>
                 <input type="email" id="email" name="email" required>
+
                 <button type="submit">Submit</button>
             </form>
             <div id="formMessage"></div>
         </div>
     </section>
 
-    <!-- Footer -->
     <footer>
         <div class="container">
             <p>&copy; 2024 STM's Nobita. All rights reserved.</p>
-            <p class="last-line">The owner of the property is Syeda Tasnia Methila.</p>
+            <p>The owner of the property is Syeda Tasnia Methila.</p>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
